# first-discord-bot

./: .env.sample  README.md  hello.py  pyproject.toml
src/: __main__.py  main.py  settings.py
src/domain/: entities.py
src/infrastructure/: database.py
src/interfaces/: discord_bot.py
src/services/: gemini_service.py
