[project]
name = "first-discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "google-genai>=1.16.1",
    "mysql-connector-python>=9.3.0",
    "pip>=25.1.1",
]

[tool.uv.scripts]
start = "python -m src"
